--- a/lit_study/lit_study.tex
+++ b/lit_study/lit_study.tex
@@ -224,7 +224,9 @@
         \paragraph
         This section will discuss trends in the literature regarding the swing damping control of multirotors with suspended payloads.
         Table~\ref{tbl:lit} lists other studies in the literature that consider this topic.
-        Studies that exclusively consider trajectory generation or cooperative transportation of a payload with multiple multirotors are excluded from this table.
+        The entries of this table are ordered to keep similar studies together, with a priority on unknown dynamics, parameter uncertainty, and proposed controllers.
+        Studies that exclusively consider trajectory generation or cooperative transportation of a payload with 
+        multiple multirotors are excluded from this table.
         From Table~\ref{tbl:lit}, it is clear that suspended payload transportation with multirotors is a popular and current research topic.
         
         \paragraph
