--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -3,11 +3,54 @@
 \chapter{Introduction}
 \label{chap:introduction}
 
-\section{Background}
+    \section{Background}
 
-\section{Project definition and objectives}
-    Use words from evaluation sheet. Like large scope...
-\section{Thesis outline}
-    
+
+    \section{Project definition and objectives}
+
+        \paragraph
+        The aim of this project is to design and implement a controller architecture for stabilised control of a multirotor with an unknown suspended payload.
+        The architecture has no prior knowledge of the suspended payload dynamics and applies a data-driven approach to determine a model of the unknown dynamics.
+        The pendulum motion of the payload significantly affects the flight dynamics by inducing oscillations into the system.
+        A controller uses the identified model for stabilised control of the multirotor by actively damping the payload swing angles.
+
+        \paragraph
+        Therefore, the research objectives are summarised as:
+        \begin{enumerate}
+            \item 
+        \end{enumerate}
+
+        % ?? Use words from evaluation sheet. Like large scope...
+
+
+    \section{Thesis outline}
+
+        \paragraph
+        Chapter~\ref{chap:introduction} provides the background for the research, the project definition and objectives, and the outline of the thesis.
+        
+        \paragraph
+        Chapter~\ref{chap:lit_study} presents a study of the literature regarding multirotors payload transportation, with a focus on suspended payloads and uncertain payload dynamics.
+        
+        \paragraph
+        Chapter~\ref{chap:modelling} contains a derivation of a mathematical model for the multirotor and suspended payload dynamics, which is used in subsequent chapters.
+        
+        \paragraph
+        Chapter~\ref{chap:system_id} describes the baseline and the proposed system identification methods methods considered in this thesis. 
+        Furthermore the performance of these methods are compared based on tests with simulation data.
+        
+        \paragraph
+        Chapter~\ref{chap:control} describes the different controllers and the corresponding controller design process used in this project.
+        Using the system identification models from the previous chapter, the controllers are also applied to the multirotor-payload system in simulation and the results are compared.
+        
+        \paragraph
+        Chapter~\ref{chap:exp_design} provides an overview of the practical multirotor setup used for experimental work with the proposed algorithms.
+        Thereby, the hardware components, software toolchain, and \gls{HITL} simulations are discussed.
+        
+        \paragraph
+        Chapter~\ref{chap:results} presents and discusses the experimental results from implementing the system identification methods to practical flight data.
+        \gls{HITL} results are also presented to test the controller algorithms with the practical hardware and software systems.
+        
+        \paragraph
+        Chapter~\ref{chap:conclusion} provides a summary of the work in this thesis. The major conclusions of this work is also presented and future recommendations are discussed.
 
 
