Added list of project objectives

--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -15,9 +15,16 @@
         A controller uses the identified model for stabilised control of the multirotor by actively damping the payload swing angles.
 
         \paragraph
-        Therefore, the research objectives are summarised as:
+        Therefore, the research objectives are:
         \begin{enumerate}
-            \item 
+            \item Investigate the literature regarding multirotor payload transportation systems and specifically consider solutions or unknown suspended payload dynamics.
+            \item Derive a dynamical model to describe a multirotor with a suspended payload.
+            \item Identify and implement a baseline system identification and control method for this system in simulation.
+            \item Design a data-driven system identification method for this system and implement it in simulation.
+            \item Design a controller based on the proposed system identification model and implement it in simulation.
+            \item Identify a hardware platform and software toolchain to implement the proposed control architecture.
+            \item Implement and verify the data-driven system identification method with experimental data from the practical system.
+            \item Implement, simulate and verify the controller algorithms on the practical hardware for effective swing damping control of the unknown suspended payload system.
         \end{enumerate}
 
         % ?? Use words from evaluation sheet. Like large scope...
