--- a/conclusion/conclusion.tex
+++ b/conclusion/conclusion.tex
@@ -1,4 +1,16 @@
 \graphicspath{{conclusion/fig/}}
 
-\chapter{Summary and Conclusion}
-\label{chap:conclusion}
+\chapter{Conclusion} \label{chap:conclusion}
+
+    \paragraph
+    This thesis considered a stabilising controller for a multirotor with an unknown suspended payload.
+
+    % ?? Use words from evaluation sheet. Like large scope...
+    \section{Baseline solution}
+
+        \paragraph
+
+    \section{Proposed solution}
+
+        \paragraph
+
