--- a/glossary.tex
+++ b/glossary.tex
@@ -48,6 +48,7 @@
 \newacronym{HITL}{HITL}{Hardware-in-the-Loop}
 \newacronym{ROS}{ROS}{Robot Operating System}
 \newacronym{UDP}{UDP}{User Datagram Protocol}
+\newacronym{FFA}{FFA}{Federal Aviation Administration}
 
 \newacronym{LPF}{LPF}{Low Pass Filter}
 \newacronym{LQG}{LQG}{Linear Quadratic Gaussian}
