--- a/conclusion/conclusion.tex
+++ b/conclusion/conclusion.tex
@@ -6,11 +6,44 @@
     This thesis considered a stabilising controller for a multirotor with an unknown suspended payload.
 
     % ?? Use words from evaluation sheet. Like large scope...
-    \section{Baseline solution}
+
+    \section{Summary}
 
         \paragraph
-
-    \section{Proposed solution}
+        Lit study
 
         \paragraph
+        Baseline technique
+
+        \paragraph
+        Modelling
+
+        \paragraph
+        System identification techniques
+
+        \paragraph
+        System identification results
+
+        \paragraph
+        Control techniques
+
+        \paragraph
+        Control results
+
+        \paragraph
+        Practical data fro sys id
+
+        \paragraph
+        HITL for control
+
+        \paragraph
+        Final wrap up
+        
+    \section{Recommended future work}
+        
+        \paragraph
+        Recommendations for future work include:
+        \begin{itemize}
+            \item 
+        \end{itemize}
 
