--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -32,15 +32,15 @@
         This significantly alters the flight dynamics of a multirotor and the controller may need to account for this uncertainty for effective control.
 
         \paragraph
-        In summary, multirotor payload transportation is becoming increasingly popular.
+        In summary, multirotor-payload transportation is becoming increasingly popular.
         The suspended payload configuration offers strategic benefits but increases the difficulty of the control task.
         Furthermore, the uncertainty in payload dynamics makes the control task more challenging.
-        In this study, a controller architecture will be designed to address this problem.
+        In this study, a control architecture will be designed to address this problem.
 
     \section{Project definition and objectives}
 
         \paragraph
-        This project aims to design and implement a controller architecture for stabilised control of a multirotor with an unknown suspended payload.
+        This project aims to design and implement a control architecture for stabilised control of a multirotor with an unknown suspended payload.
         This system includes payload uncertainty and the oscillatory motion of the payload significantly affects the multirotor dynamics.
         The proposed controller should be compared to previous work involving a swing damping controller for a suspended payload with an unknown mass and cable length. 
         
@@ -53,7 +53,7 @@
         \paragraph
         Therefore, the research objectives are stated as:
         \begin{enumerate}
-            \item Investigate the literature regarding multirotor payload transportation systems and specifically consider solutions or unknown suspended payload dynamics.
+            \item Investigate the literature regarding multirotor-payload transportation systems and specifically consider solutions or unknown suspended payload dynamics.
             \item Derive a dynamical model to describe a multirotor with a suspended payload.
             \item Identify and implement a baseline system identification and control method for this system in simulation.
             \item Design a data-driven system identification method for this system and implement it in simulation.
