--- a/lit_study/lit_study.tex
+++ b/lit_study/lit_study.tex
@@ -42,7 +42,7 @@
             \includegraphics[width=0.9\linewidth]{actuated_payload_blue_bg.jpg}
             \caption{Robotic actuator \cite{Tardella2016}}
         \end{subfigure}
-        \caption{Different multirotor payload configurations}
+        \caption{Different multirotor-payload configurations}
         \label{fig:rigid_suspended_actuated} 
     \end{figure}
 
