--- a/system_id/plots/prediction_double_pend_white.tex
+++ b/system_id/plots/prediction_double_pend_white.tex
@@ -41,7 +41,7 @@
         % \addlegendentry{HAVOK}
 
         \addplot+[mark = none, style = dashed, ultra thick] 
-        table[x = time, y = theta_white, col sep = comma] 
+        table[x = time, y expr = \thisrow{theta_white} * 57.2958, col sep = comma] 
         {system_id/csv/single_step_predictions_SITL_single_vel_step_m1_0.2_l1_m2_0.1_l2_0.3.csv.csv};
         \addlegendentry{White-box}
 
