--- a/conclusion/conclusion.tex
+++ b/conclusion/conclusion.tex
@@ -83,8 +83,10 @@
         % This method assumes that the dynamical model of the payload is also unknown prior to flight.
 
         \paragraph
+        Furthermore, the different controllers used in this work were described 
         The proposed control architecture includes a \gls{MPC} controller which uses a data-driven system identification model for predictive control.
-        The \gls{MPC}
+        The \gls{MPC} implementation from the Model Predictive Control Toolbox\texttrademark~in Simulink was used and the algorithm was described in detail.
+        This controller, using data-driven system identification models, was also successfully applied for swing damping control in simulation.
 
         \paragraph
         Control results
